# parallel_cpp

./: CMakeLists.txt  PARALLEL_UTILITY_SETUP.md  PROJECT_OVERVIEW.md  README.md  requirements.txt
.github/workflows/: tests.yml
python/: worker.py
src/: dataset.h  main.cpp  protocol.h  worker_process.cpp  worker_process.h
tests/: asan_options.cpp  protocol_test.cpp  worker_process_test.cpp
